fix dto